[package]
name = "with-baby-geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.59"
chrono = "0.4.19"
libh3-sys = "0.1.3"
redis = { version = "0.21.5", features = ["tokio-comp"] }
thiserror = "1.0.31"
